# Moses

./: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: main.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  options.rs  picker.rs  program.rs
src/ico/: Trophy.svelte
src/lib/: Launch.svelte  Settings.svelte
src/stores/: config-store.ts  debug-store.ts
