[package]
name = "moses"
version = "0.0.1"
description = "Custom Isaac Launcher"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open" , "dialog"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.5.1"
regex = "1.10.2"
hotwatch = "0.5.0"

[target.'cfg(windows)'.dependencies]
CreateProcessW = "0.1.3"

[target.'cfg(unix)'.dependencies]
fork = "0.1.22"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
